--- a/src/styles/product-details.css
+++ b/src/styles/product-details.css
@@ -94,6 +94,19 @@
   font-size: 1.4rem;
 }
 
+.select__ingredient {
+  font-size: 17px;
+  margin-bottom: 10px;
+  color: #212245;
+  font-weight: bold;
+}
+
+.check__ingredient {
+  margin-left: 10px;
+  font-size: 15px;
+  font-weight: normal;
+}
+
 @media only screen and (max-width: 768px) {
   .product__title {
     font-size: 1.2rem;
